# PakePlus

./: .env.example  .gitignore  .hintrc  LICENSE  Note.md  README.md  README_JP.md  README_ZH.md  RELEASE.md  UPDATE_LOG.md  components.d.ts  index.html  netlify.toml  package.json  pnpm-lock.yaml  requirements.txt  stats.html  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.yml  feature_request.yml
.github/back/: alpha.yml  auto.yml  beta_build.yml  build copy.yml  build.yml  desc.md  issue.yml  other.yml  press.yml  runner.yml  test.yml
.github/workflows/: auto.yml  beta_build.yml  build.yml  issue.yml  press.yml  sync.yml  test.yml
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/gradle/: libs.versions.toml
assets/: README.md  README_CN.md  README_JP.md  config.txt  index.html
cli/: creatIcon.cjs  demo.js  gitpress.cjs  issue.py  output.icns  release.mjs  rename.cjs  updatelog.mjs  updater.mjs
docs/: README.md  README_CN.md  README_JP.md  README_ZH.md  custom.js  down.md  foo.md  hado.html  index.html  index.md  index_en.html  index_ja.html  index_zh.html  index_zh.md  install.json  redbook_0.0.1_amd64.deb  release.json  tauriConfig.ts  test.html
docs/.vitepress/: config.ts
docs/bundle/: Yandex_0.0.1_aarch64.dmg  Yandex_0.0.1_amd64.deb  redbook_0.0.1_aarch64.dmg
docs/components/: bilibili.vue  down.vue  payer.vue  popular.vue  qun.vue  sponsor.vue  supporter.vue
docs/en/: foo.md  index.md
docs/exchange/: business.md  custom.md  github.md  index.md
docs/guide/: appconfig.md  build.md  config.md  creat.md  custompack.md  desktopapi.md  easylocal.md  index.md  phone.md  phoneapi.md  policy.md  script.md  success.md  superman.md  tauri.md  test.js  todo.md  token.md
docs/ja/: index.md
docs/ko/: index.md
docs/pages/: test.html
docs/public/: ads.txt  latest.json  ppnotes.json  ppupdate.json  ppweb.js
docs/question/: build.md  debug.md  exist.md  html.md  index.md  invalid.md  issue.md  jump.md  limit.md  other.md  pay.md  phone.md  sum.md  vue.md
docs/sponsor/: company.md  index.md  list.md
docs/widgets/: notes.vue
docs/zh/: download.md  index.md
fastlane/: AuthKey_R47WLFX7FG.p8  Deliverfile  Fastfile  README.md  api_key.json
fastlane/ios/: localized.sh  localized.yaml
public/: Cargo.toml  android.yml  build.yml  cargo.txt  common.ts  config.json  custom.js  init.rs  init.txt  ios.yml  lib.txt  ppandroid.json  ppios.json  rhscript.txt
pwa/: index.html  manifest.json
scripts/: appleIcns.html  buildtime.d.ts  buildtime.js  cfproxy.js  creatIcon.cjs  docsseo.cjs  gitpress.cjs  issue.py  latest.json  ppconfig.json  ppupdate.json  ppworker.cjs  roundIcon.html  roundIcon2.html  update.md  water.html  winIcon.html  worker.cjs
scripts/config/: man  man.json
src/: App.vue  app.js  asset-manifest.json  beikaobidu.html  custom.js  index.html  main.js  main.ts  rhscript.txt  styles.css  test.html  tuotu.js  vite-env.d.ts  width.css
src-tauri/: Cargo.toml  Entitlements.plist  pakeplus.provisionprofile  tauri.appstore.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/data/: Cargo.toml  analytics.js  appbuild.yml  appconfig.json  appmain.rs  build.yml  config.json  custom.js  init.rs  lib.rs  main.rs  man.json  rhicon.txt
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/command/: cmds.rs  mod.rs  model.rs  pake.rs  pakeplus.rs  preview.rs
src-tauri/src/data/: Cargo.toml  main.rs
src-tauri/src/extension/: custom.js  event.js  openlink.js  style.js
src-tauri/src/utils/: init.rs  mod.rs  tools.rs
src/apis/: comm.ts  common.ts  github.ts  pay.ts
src/assets/: 401-67b94ff0.js  404-972ed929.js  ActionButton-04036752.js  CalendarOutlined-8ff6678f.js  CheckOutlined-ab04c92f.js  CloseOutlined-4f0ea934.js  DeleteOutlined-6b999003.js  DeleteOutlined-c2326a92.js  DisconnectOutlined-764e4556.js  EditOutlined-21831c3e.js  EyeOutlined-d33bc3ff.js  EyeOutlined-f0ed5c3d.js  PlusCircleOutlined-90803570.js  Portal-0dc81ff6.js  PowerTreeTable-6e795c42.js  SearchOutlined-fa850377.js  StopOutlined-b16a34ba.js  TextArea-a18ea7e9.js  ToolOutlined-4ea6ca79.js  UploadOutlined-636e8664.js  antd-img-crop.esm-86a10eb1.js  codemirror-CRD50hCS.js  game-5b925b0c.js  getScrollBarSize-6b2349d8.js  global.scss  hado-2bd80816.js  index-027a20d0.css  index-03851521.js  index-03f054d8.js  index-0424dd02.css  index-0624feab.js  index-07c110a6.css  index-086fb7fe.css  index-0a9ad780.js  index-0d288ad4.css  index-1058223b.css  index-15ea9844.js  index-1b6195b7.css  index-1cf97efe.js  index-1lhGTocU.js  (+120 more)
src/ccieeilab1/: ccieeilab1_main.html  exam_content.css  list.css  width.css
src/components/: Building.vue  CodeEdit.vue  CutterImg.vue  ImgPreview.vue  PhoneConfig.vue  TauriConfig.vue  Updater.vue  codeEdit.vue
src/lang/: en.ts  en_us.ts  index.ts  ja_jp.ts  ko_kr.ts  zh.ts  zh_cn.ts  zh_tw.ts
src/model/: idnex.ts  index.ts
src/pages/: about.vue  edit.vue  history.vue  home.vue  phone.vue  publish.vue  tauriapi.vue
tauri-plugin-pakeplus/: Cargo.toml  README.md  package.json
tauri-plugin-pakeplus/examples/tauri-app/: package.json
tauri-plugin-pakeplus/examples/tauri-app/src/: App.svelte
tauri-plugin-pakeplus/examples/tauri-app/src-tauri/: Cargo.toml
tauri-plugin-pakeplus/examples/tauri-app/src-tauri/capabilities/: default.json
tauri-plugin-pakeplus/examples/tauri-app/src-tauri/src/: lib.rs
tauri-plugin-pakeplus/guest-js/: index.ts
tauri-plugin-pakeplus/src/: commands.rs  desktop.rs  lib.rs  mobile.rs
(+232 files in other folders)
