[package]
name = "NiKa AI"
version = "0.0.1"
description = "NiKa AI 利用尖端人工智慧模型，包括 OpenAI o1、GPT-4o、Claude 3.5 和 Gemini 1.5，來提升您的聊天、搜尋、寫作和程式設計體驗。可作為 Chrome 和 Edge 瀏覽器擴充功能使用，同時提供行動和桌面應用程式。"
authors = ["1024xiaoshen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "os-all", "path-all", "protocol-all", "dialog-all", "clipboard-all", "fs-all", "http-all", "window-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
