[package]
name = "PROJECTNAME"
version = "PROJECTVERSION"
description = "PROJECTDESC"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "os-all", "path-all", "protocol-all", "dialog-all", "clipboard-all", "fs-all", "http-all", "window-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
